# similarity_reconstruction

./: .gitignore  README.md
code/: .gitignore
code/common/data_load/: CMakeLists.txt  label_data_load.cpp  label_data_load.h  urban_reconstruction_data_load.cpp  urban_reconstruction_data_load.h
code/common/utilities/: CMakeLists.txt  common_utility.h  eigen_utility.cpp  eigen_utility.h  matlab_runtime_utility.h  matlab_utility.cpp  matlab_utility.h  pcl_utility.cpp  pcl_utility.h
code/hashmap/: CMakeLists.txt  cmake_arguments
code/hashmap/consistency_check/: CMakeLists.txt  consistency_check.cpp  consistency_check.h  test_consistency_check.cpp
code/hashmap/depthmap_fusion/depthmap_to_mesh/: CMakeLists.txt  depthmap.cpp  depthmap_triangle_mesh_main.cpp  depthmap_trianglemesh.cpp  depthmap_trianglemesh.h
code/hashmap/depthmap_fusion/ply2vri_color/: ply2vri.cpp  ply2vri_color.files  ply2vri_color.includes  trimesh.cpp  vec.h
code/hashmap/depthmap_fusion/vrl_to_hash/: convert_vrl_to_hash.h  test_merge_vri.cpp  test_vri_hash_tsdf_conversion.cpp
code/hashmap/detection/: CMakeLists.txt  detect_main.cpp  detect_sample.cpp  detect_sample.h  detection_utility.cpp  detection_utility.h  detector.cpp  detector.h  obb_intersection.cpp  obb_intersection.h  train_detectors_main.cpp
code/hashmap/marching_cubes/: marching_cubes_tsdf_hash.cpp
code/hashmap/tsdf_operation/: diffusion_hole_filling.cpp  diffusion_hole_filling.h  tsdf_align.cpp  tsdf_align.h  tsdf_clean.cpp  tsdf_clean.h  tsdf_feature_generate.cpp  tsdf_feature_generate.h  tsdf_io.cpp  tsdf_io.h  tsdf_joint_align.cpp  tsdf_joint_align.h  tsdf_joint_optimization.cpp  tsdf_joint_optimization.h  tsdf_pca.cpp  tsdf_pca.h  tsdf_slice.cpp  tsdf_slice.h  tsdf_transform.cpp  tsdf_transform.h  tsdf_utility.cpp  tsdf_utility.h
code/hashmap/tsdf_representation/: tsdf_hash.h  voxel_hashmap.h
code/hashmap/utility/: oriented_boundingbox.cpp  svm_wrapper.cpp  utility.cpp
code/hashmap/visualization/trimesh2/: Makedefs.Linux  trimesh2_qt_test3.files  trimesh2_qt_test3.includes
code/similarity_reconstruction/: .gitignore  CMakeLists.txt  build.sh  cmake_arguments
code/similarity_reconstruction/consistency_check/: CMakeLists.txt  consistency_check.cpp  consistency_check.h  test_consistency_check.cpp
code/similarity_reconstruction/demo_scripts/: .gitignore  consistency_check.sh  consistency_check2.sh  consistency_check_cmp.sh  demo.sh  init_paths.sh  init_paths_sample.sh  job_pool.sh  joint_cluster_model-new.sh  run-6050-seq.sh  run-detection.sh  run-detection2.sh  run-optimization2.sh  run_all.sh  run_all_crop.sh  run_crop_tsdf_as_gt-16-5-6.sh  run_crop_tsdf_as_gt_in_refactorcode.sh  run_detection.sh  run_detection_hdin.sh  run_joint_reconstruction.sh  run_joint_reconstruction_hdin.sh  run_optimization.sh  run_optimization2.sh  run_optimization_cmp.sh  run_reconstruction_both_sides.sh  run_reconstruction_one_side.sh  visualization.sh
code/similarity_reconstruction/depthmap_fusion/: .gitignore  CMakeLists.txt  depth_fusion_approx_main.cpp
code/similarity_reconstruction/depthmap_fusion/depthmap_to_mesh/: depthmap.cpp  depthmap.h  depthmap_triangle_mesh_main.cpp
code/similarity_reconstruction/depthmap_fusion/ply2vri_color/: CMakeLists.txt  Makefile  license.txt  ply.h  ply2vri.cpp  ply2vri.dsp  ply2vri.dsw  plyfile.c  readme.txt  trimesh.cpp  trimesh.h  vec.h
code/similarity_reconstruction/depthmap_noise_filter/: CMakeLists.txt  depthmap_filter.cpp  depthmap_filter.h  depthmap_filter_main.cpp
code/similarity_reconstruction/detection/: 2dobb.cpp  2dobb.h  CMakeLists.txt  detect_main.cpp  detect_sample.cpp  detect_sample.h  detection_utility.cpp  detection_utility.h  detector.cpp  detector.h  obb_intersection.cpp  obb_intersection.h  train_detectors_main.cpp
code/similarity_reconstruction/joint_reconstruction/: CMakeLists.txt  test_tsdf_optimization.cpp  tsdf_joint_optimization.cpp  tsdf_joint_optimization.h
code/similarity_reconstruction/marching_cubes/: CMakeLists.txt  marching_cubes_tsdf_hash.cpp  marching_cubes_tsdf_hash.h
code/similarity_reconstruction/scripts/: adjust_final.txt  adjust_final2.txt  batch_run_ply2vri.sh  compute_pr_curve.sh  consistency_check2.sh  init.sh  init2.sh  init_template.sh  joint_cluster_model.sh  joint_cluster_model_indepentend.sh  jointrecon_adjustfinal.txt  prepare_gt.sh  read_crop_info_from_xml.sh  run-1470-seq.sh  run-1470-seq.shback-7-17  run-1890-seq-back2.sh  run-1890-seq.sh  run-3050-seq-origin.sh  run-3050-seq.sh  run-3320-seq.sh  run-6050-seq-new.sh  run-adjust-obbs.sh  run-adjust-obbs2-1.sh  run-adjust-obbs2.sh  run-adjust-obbs_test1.sh  run-calibseq.sh  run-depthmap-main.sh  run-depthmap-triangularize.sh  run-detection-alignment-cars.sh  run-detection-alignment-new.sh  run-detection-alignment-seperate-seq.sh  run-detection-alignment-sepseq-house.sh  run-detection-alignment-sepseq-jointall-seq1470.sh  run-detection-alignment-sepseq-jointall.sh  run-detection-alignment-sepseq-jointall2-seq1470-back1.sh  run-detection-alignment-sepseq-jointall2-seq1470-back2.sh  run-detection-alignment-sepseq-jointall2-seq1470-back3.sh  run-detection-alignment-sepseq-jointall2-seq1470-back5.sh  run-detection-alignment-sepseq-jointall2.sh  run-detection-alignment.sh  (+71 more)
code/similarity_reconstruction/tsdf_hash_utilities/: CMakeLists.txt  oriented_boundingbox.cpp  oriented_boundingbox.h  serialize_unordered_map.h  svm_wrapper.cpp  svm_wrapper.h  utility.cpp  utility.h
code/similarity_reconstruction/tsdf_operation/: CMakeLists.txt  crop_training_tsdf.cpp  diffusion_hole_filling.cpp  diffusion_hole_filling.h  tsdf_align.cpp  tsdf_align.h  tsdf_clean.cpp  tsdf_clean.h  tsdf_feature_generate.cpp  tsdf_feature_generate.h  tsdf_io.cpp  tsdf_io.h  tsdf_pca.cpp  tsdf_pca.h  tsdf_slice.cpp  tsdf_slice.h  tsdf_smooth.cpp  tsdf_smooth.h  tsdf_transform.cpp  tsdf_transform.h  tsdf_utility.cpp  tsdf_utility.h
code/similarity_reconstruction/tsdf_representation/: .gitignore  CMakeLists.txt  tsdf_hash.cpp  tsdf_hash.h  voxel_data.cpp  voxel_data.h  voxel_hashmap.cpp  voxel_hashmap.h
(+40 files in other folders)
